<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ericsson.project.tescheduler.ParametersActivity"
    tools:showIn="@layout/activity_parameters">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameters_label_budget"
        style="@style/AppTheme.LabelText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/parameters_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:hint="@string/parameters_enterbudget"
            android:inputType="numberDecimal"
            style="@style/AppTheme.InputText"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameters_currency"
            style="@style/AppTheme.InputText"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameters_label_numtravelers"
        style="@style/AppTheme.LabelText"
        android:layout_marginTop="@dimen/label_margin"
        />

    <LinearLayout
        android:id="@+id/parameters_numtravelers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">
        <EditText
            android:id="@+id/parameters_numtravelers_adults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/parameters_mintravelers_adults"
            android:textAlignment="center"
            style="@style/AppTheme.InputText"
            android:inputType="number"
            android:layout_weight="2"
            />
        <TextView
            android:labelFor="@id/parameters_numtravelers_adults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameters_adults"
            style="@style/AppTheme.BlackText"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/parameters_numtravelers_kids"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/parameters_mintravelers_kids"
            android:textAlignment="center"
            style="@style/AppTheme.InputText"
            android:inputType="number"
            android:layout_weight="2"
            />
        <TextView
            android:labelFor="@id/parameters_numtravelers_kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameters_kids"
            style="@style/AppTheme.BlackText"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameters_label_tripperiod"
        style="@style/AppTheme.LabelText"
        android:layout_marginTop="@dimen/label_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parameters_from"
            style="@style/AppTheme.BlackText"
            android:layout_weight="1"
            />
        <!--IGNORE THIS IN INSPECTION, cannot put label for ID before declaration-->
        <EditText
            android:id="@+id/parameters_tripstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/value_date"
            android:textAlignment="center"
            style="@style/AppTheme.InputText"
            android:inputType="date"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/parameters_tripstart_button"
            android:layout_width="@dimen/imagebutton_size"
            android:layout_height="@dimen/imagebutton_size"
            android:background="@null"
            android:src="@drawable/ic_date_range_black_24dp"
            android:contentDescription="@string/img_description"
            android:layout_marginEnd="@dimen/trip_period_margin_right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parameters_to"
            style="@style/AppTheme.BlackText"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/parameters_tripend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/value_date"
            android:textAlignment="center"
            style="@style/AppTheme.InputText"
            android:inputType="date"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/parameters_tripend_button"
            android:layout_width="@dimen/imagebutton_size"
            android:layout_height="@dimen/imagebutton_size"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/ic_date_range_black_24dp"
            android:contentDescription="@string/img_description"
            android:layout_marginEnd="@dimen/trip_period_margin_right"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameters_label_mobility"
        style="@style/AppTheme.LabelText"
        android:layout_marginTop="@dimen/label_margin"
        />
    <Spinner
        android:id="@+id/parameters_mobility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameters_label_startlocation"
        style="@style/AppTheme.LabelText"
        android:layout_marginTop="@dimen/label_margin"
        />
    <RadioGroup
        android:id="@+id/parameters_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/parameters_radio_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <AutoCompleteTextView
                android:id="@+id/parameters_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/parameters_enteraddress"
                android:singleLine="true"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/parameters_buttonmylocation"
                android:layout_width="@dimen/imagebutton_size"
                android:layout_height="@dimen/imagebutton_size"
                style="@style/AppTheme.ColoredButton"
                android:src="@drawable/ic_place_white_24dp"
                android:contentDescription="@string/img_description"
                android:onClick="useCurrentPosition"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/parameters_radio_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/parameters_residences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </RadioGroup>

</LinearLayout>
