<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ericsson.project.tescheduler.InfoActivity"
    tools:showIn="@layout/activity_info">

    <ImageView
        android:id="@+id/info_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vasamuseet"
        android:contentDescription="@string/img_description"
        android:layout_marginTop="@dimen/margin_poiimage"
        />

    <LinearLayout
        android:layout_below="@id/info_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="-36dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/label_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black_24dp"
                android:contentDescription="@string/img_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_openingtimes"
                style="@style/AppTheme.InputText"
                android:layout_marginEnd="@dimen/label_margin"/>
            <TextView
                android:id="@+id/infovalue_isopen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_expand_more_black_24dp"
                android:text="@string/info_openstatus"
                style="@style/AppTheme.InputText"
                android:textColor="@android:color/holo_red_light"
                android:clickable="true"
                android:onClick="showScheduleFragment"/>
        </LinearLayout>

        <include
            layout="@layout/fragment_info_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin"
            />

        <include
            layout="@layout/fragment_info_specialdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hourglass_empty_black_24dp"
                android:contentDescription="@string/img_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_visitduration"
                style="@style/AppTheme.InputText"
                android:layout_marginEnd="@dimen/label_margin"/>
            <TextView
                android:id="@+id/infovalue_visittime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_duration"
                style="@style/AppTheme.BlackText"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_atm_black_24dp"
                android:contentDescription="@string/img_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_price"
                style="@style/AppTheme.InputText"
                android:layout_marginEnd="@dimen/label_margin" />
            <TextView
                android:id="@+id/infovalue_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_expand_more_black_24dp"
                android:text="@string/value_price"
                style="@style/AppTheme.InputText"
                android:clickable="true"
                android:onClick="showPriceFragment"
                />
        </LinearLayout>

        <include
            layout="@layout/fragment_info_pricelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_public_black_24dp"
                android:contentDescription="@string/img_description"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_website"
                style="@style/AppTheme.InputText"
                android:layout_marginEnd="@dimen/label_margin"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/infovalue_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/value_website"
                style="@style/AppTheme.InputText"
                android:autoLink="web"
                android:layout_weight="3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_phone_black_24dp"
                android:contentDescription="@string/img_description" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_phone"
                style="@style/AppTheme.InputText"
                android:layout_marginEnd="@dimen/label_margin"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/infovalue_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/value_phone"
                style="@style/AppTheme.BlackText"
                android:autoLink="phone"
                android:layout_weight="3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_medium">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place_black_24dp"
                android:contentDescription="@string/img_description"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_address"
                style="@style/AppTheme.InputText"
                android:layout_marginEnd="@dimen/label_margin"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/infovalue_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/value_address"
                style="@style/AppTheme.BlackText"
                android:layout_weight="3"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/infovalue_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value_pidescription"
            style="@style/AppTheme.BlackText"
            android:layout_marginTop="@dimen/margin_medium"
            />
    </LinearLayout>
</RelativeLayout>