<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/confirmpoi_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        android:layout_marginTop="@dimen/cardview_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/cardview_padding">

            <TextView
                android:id="@+id/element_piname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/non_available"
                style="@style/AppTheme.BlackText"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/element_visitduration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageButton
                android:id="@+id/element_buttoncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_24dp"
                android:contentDescription="@string/img_description"
                android:background="@null"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmpi_undo"
        android:textColor="?android:attr/colorAccent"
        android:textStyle="bold"
        style="@style/AppTheme.BlackText"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:clickable="true"
        />

</LinearLayout>